--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,25 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+
 :root {
-  --first-color: #1a73e8;
+  --first-color: #11f311;
+  --second-color: #d8240d;
   --input-color: #80868b;
   --border-color: #dadce0;
 
+  --body-font: "Roboto", sans-serif;
   --normal-font-size: 1rem;
+  --small-font-size: 0.75rem;
 }
 
 *,
 ::before,
 ::after {
   box-sizing: border-box;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
 }
 
 .l-form {
@@ -30,6 +40,7 @@
 .panel-heading {
   font-weight: 400;
   margin-bottom: 3rem;
+  border-radius: 0.5rem;
 }
 
 .panel-block {
@@ -38,4 +49,68 @@
 
 .userSpan {
   margin-bottom: 45px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: var(--normal-font-size);
+  border: 1px solid var(--border-color);
+  border-radius: 0.5rem;
+  outline: none;
+  padding: 1rem;
+  background: none;
+  z-index: 1;
+}
+
+.passSpan {
+  margin-bottom: 45px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: var(--normal-font-size);
+  border: 1px solid var(--border-color);
+  border-radius: 0.5rem;
+  outline: none;
+  padding: 1rem;
+  background: none;
+  z-index: 1;
+}
+
+.form__button {
+  display: block;
+  justify-content: center;
+  margin-left: auto;
+  margin-top: 15px;
+  padding: 0.5rem 2rem;
+  outline: none;
+  border: none;
+  background-color: var(--first-color);
+  color: rgb(12, 11, 11);
+  font-size: 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.form__button:hover {
+  box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
+  text-decoration: none;
+  color: #fff;
+}
+
+.userSpan:focus {
+  border: 1.5px solid var(--first-color);
+}
+
+.passSpan:focus {
+  border: 1.5px solid var(--second-color);
+}
+
+.userSpan:not(:placeholder-shown).userSpan:not(:focus) + .passSpan {
+  top: -0.5rem;
+  left: 0.8rem;
+  font-size: var(--small-font-size);
+  font-weight: 500;
+  z-index: 10;
 }
